// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pager with fullscreen 1`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager pager_withFullscreen"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          1 из 1
        </span>
      </div>
      <div
        class="fullscreen"
      >
        <lego-components_button
          classname="fullscreen__button"
          controlref="[object Object]"
          icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
          onclick="function () { [native code] }"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pager with fullscreen 2`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager pager_withFullscreen"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          1 из 5
        </span>
      </div>
      <div
        class="fullscreen"
      >
        <lego-components_button
          classname="fullscreen__button"
          controlref="[object Object]"
          icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
          onclick="function () { [native code] }"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pager with fullscreen 3`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager pager_withFullscreen"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="12"
        />
        <span
          class="pageCounter"
        >
          12 из 17
        </span>
      </div>
      <div
        class="fullscreen"
      >
        <lego-components_button
          classname="fullscreen__button"
          controlref="[object Object]"
          icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
          onclick="function () { [native code] }"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pager with fullscreen 4`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager pager_withFullscreen"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="101"
        />
        <span
          class="pageCounter"
        >
          101 из 101
        </span>
      </div>
      <div
        class="fullscreen"
      >
        <lego-components_button
          classname="fullscreen__button"
          controlref="[object Object]"
          icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
          onclick="function () { [native code] }"
          size="s"
          view="clear-inverse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pager without fullscreen 1`] = `null`;

exports[`pager without fullscreen 2`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="1"
        />
        <span
          class="pageCounter"
        >
          1 из 5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`pager without fullscreen 3`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="12"
        />
        <span
          class="pageCounter"
        >
          12 из 17
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`pager without fullscreen 4`] = `
<div
  class="pagerWrapper"
>
  <div
    class="pagerLayout"
  >
    <div
      class="pager"
    >
      <div
        class="pageCounterWrapper"
      >
        <input
          class="input"
          min="1"
          type="number"
          value="101"
        />
        <span
          class="pageCounter"
        >
          101 из 101
        </span>
      </div>
    </div>
  </div>
</div>
`;
